--- a/EducationManagement/EducationManagement.csproj
+++ b/EducationManagement/EducationManagement.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MySqlConnector" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="db\" />
+  </ItemGroup>
+
 </Project>
